profile dropdown no longer off screen

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -28,7 +28,8 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 85, 0, 0.359);
-    right: 10%;
+    /* right: 10%; */
+    margin-left: 145px;
     border-radius: 5px;
 }
 
